--- a/src/ParallelLoopLibrary/ParallelLoopLibrary.csproj
+++ b/src/ParallelLoopLibrary/ParallelLoopLibrary.csproj
@@ -4,6 +4,24 @@
     <TargetFramework>netcoreapp3.0</TargetFramework>
     <AssemblyName>ParallelLoopLibrary</AssemblyName>
     <RootNamespace>ParallelLoopLibrary</RootNamespace>
+    <Version>1.0.1</Version>
+    <Authors>Theodor Zoulias</Authors>
+    <Description>A .NET library that helps at creating parallel loops of dependent or independent actions</Description>
+    <PackageLicenseFile>LICENSE</PackageLicenseFile>
+    <PackageIcon>logo.png</PackageIcon>
+    <PackageProjectUrl>https://github.com/theodorzoulias/ParallelLoopLibrary</PackageProjectUrl>
+    <PackageTags>parallel;loop</PackageTags>
   </PropertyGroup>
+
+  <ItemGroup>
+    <None Include="..\..\LICENSE">
+      <Pack>True</Pack>
+      <PackagePath></PackagePath>
+    </None>
+    <None Include="..\..\logo.png">
+      <Pack>True</Pack>
+      <PackagePath></PackagePath>
+    </None>
+  </ItemGroup>
 
 </Project>
