--- a/src/ParallelLoopLibrary/ParallelLoopLibrary.csproj
+++ b/src/ParallelLoopLibrary/ParallelLoopLibrary.csproj
@@ -1,7 +1,7 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.0</TargetFramework>
+    <TargetFrameworks>netstandard2.0;net46</TargetFrameworks>
     <AssemblyName>ParallelLoopLibrary</AssemblyName>
     <RootNamespace>ParallelLoopLibrary</RootNamespace>
     <Version>1.0.1</Version>
